fixed h1, h2 center align

--- a/w06_style.css
+++ b/w06_style.css
@@ -5,7 +5,7 @@ html {
 body {
   background-color: lightblue;
 }
-h1
+h1,
 h2 {
   text-align: center;
 }
